<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryHighlight"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ename"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/exercise_name"
            android:inputType="text"
            android:textColor="@color/colorTextDark"
            android:textColorHint="@color/colorTextDark" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-80dp"
            android:text="@string/areas_worked"
            android:textColor="@color/colorTextDark"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/planbox"
            android:padding="5dp">

            <CheckBox
                android:id="@+id/chest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/chest" />

            <CheckBox
                android:id="@+id/arms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="13dp"
                android:layout_toEndOf="@+id/chest"
                android:text="@string/arms" />

            <CheckBox
                android:id="@+id/legs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="26dp"
                android:layout_toEndOf="@+id/arms"
                android:text="@string/legs" />

            <CheckBox
                android:id="@+id/core"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/chest"
                android:text="@string/core" />

            <CheckBox
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/arms"
                android:layout_below="@+id/arms"
                android:text="@string/back" />

            <CheckBox
                android:id="@+id/shoulders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/legs"
                android:layout_below="@+id/legs"
                android:text="@string/shoulders" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-115dp"
            android:layout_marginTop="10sp"
            android:text="@string/type"
            android:textColor="@color/colorTextDark"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-30dp"
            android:entries="@array/type_array" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="-90dp"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            android:textColor="@color/colorTextDark"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/description"
            android:layout_width="280dp"
            android:layout_height="100dp"
            android:background="@drawable/planbox"
            android:ems="10"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:textColor="@color/colorTextDark"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/save"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/save_exercise"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:textColor="@color/colorTextLight"
            android:textSize="18sp" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>