<?xml version="1.0" encoding="utf-8"?>
<com.p14137775.myapplication.SetView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/setview">
    <TextView
        android:id="@+id/set"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:text="@string/set"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/reps"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/reps" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:inputType="numberDecimal"
        android:hint="@string/weight"/>

</com.p14137775.myapplication.SetView>