<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:text="@string/register"
        android:textColor="@color/colorTextLight"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="244dp"
        android:layout_height="43dp"
        android:layout_marginTop="35dp"
        android:focusable="true"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorTextLight"
        android:textColorHint="@color/colorTextLight"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dob"
        android:textColor="@color/colorTextLight"
        app:layout_constraintLeft_toLeftOf="@+id/editText"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="244dp"
        android:layout_height="63dp"
        android:layout_marginTop="39dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="244dp"
        android:layout_height="40dp"
        android:layout_marginTop="7dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePicker">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:background="@drawable/radio_button"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginStart="22dp"
            android:background="@drawable/radio_button"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/female" />
    </RadioGroup>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="244dp"
        android:layout_height="43dp"
        android:layout_marginTop="9dp"
        android:focusable="true"
        android:hint="@string/height"
        android:inputType="numberDecimal"
        android:textColor="@color/colorTextLight"
        android:textColorHint="@color/colorTextLight"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="244dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:focusable="true"
        android:hint="@string/weight"
        android:inputType="numberDecimal"
        android:textColor="@color/colorTextLight"
        android:textColorHint="@color/colorTextLight"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/button"
        android:layout_width="268dp"
        android:layout_height="56dp"
        android:layout_marginTop="19dp"
        android:backgroundTint="@color/colorPrimaryHighlight"
        android:text="@string/complete_reg"
        android:textAppearance="@android:style/TextAppearance.Material.Body1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

</android.support.constraint.ConstraintLayout>