<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:text="@string/register"
        android:textColor="@color/colorTextLight"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="244dp"
        android:layout_height="43dp"
        android:layout_marginTop="35dp"
        android:focusable="true"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorTextLight"
        android:textColorHint="@color/colorTextLight"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="244dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:focusable="true"
        android:hint="@string/email_confirm"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorTextLight"
        android:textColorHint="@color/colorTextLight"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="244dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:focusable="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/colorTextLight"
        android:textColorHint="@color/colorTextLight"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="244dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:focusable="true"
        android:hint="@string/password_confirm"
        android:inputType="textPassword"
        android:textColor="@color/colorTextLight"
        android:textColorHint="@color/colorTextLight"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <Button
        android:id="@+id/button"
        android:layout_width="268dp"
        android:layout_height="56dp"
        android:layout_marginTop="67dp"
        android:backgroundTint="@color/colorPrimaryHighlight"
        android:text="@string/begin_reg"
        android:textAppearance="@android:style/TextAppearance.Material.Body1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />
</android.support.constraint.ConstraintLayout>