<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryHighlight">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/networkImageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/guidance" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="18sp"
            android:textColor="@color/colorTextDark"
            android:gravity="center" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/colorPrimaryHighlight"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:textColor="@color/colorTextDark"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/begin_ex"
            android:textColor="@color/colorTextLight"
            android:textSize="18sp"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:backgroundTint="@color/colorPrimary" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            app:srcCompat="@drawable/ic_delete"
            android:contentDescription="@string/delete_button" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>